<resources>
    <!-- common -->
    <string name="app_name">Playlist Maker</string>

    <string name="developer_email" translatable="false">dima52002@yandex.ru</string>
    <string name="mail_support_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_support_text" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <string name="url__share_app_hint">Поделиться приложением Playlist Maker</string>
    <string name="url__share_app" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="url__user_agreement" translatable="false">https://yandex.ru/legal/practicum_offer/</string>

    <!-- main -->
    <string name="main__title">Playlist maker</string>
    <string name="main__search">Поиск</string>
    <string name="main__media_library">Медиатека</string>
    <string name="main__settings">Настройки</string>

    <!-- search -->
    <string name="search__title">Поиск</string>
    <string name="search__form_hint">Поиск</string>
    <string name="search__placeholder_error_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search__placeholder_no_results">Ничего не нашлось</string>
    <string name="search__placeholder_button">Обновить</string>
    <string name="search__history_title">Вы искали</string>
    <string name="search__history_button">Очистить историю</string>

    <!-- settings -->
    <string name="settings__title">Настройки</string>
    <string name="settings__dark_theme">Темная тема</string>
    <string name="settings__share_app">Поделиться приложением</string>
    <string name="settings__write_to_support">Написать в поддержку</string>
    <string name="settings__user_agreement">Пользовательское соглашение</string>

    <!-- audio_player -->
    <string name="audio_player__duration">Длительность</string>
    <string name="audio_player__collection_name">Альбом</string>
    <string name="audio_player__release_year">Год</string>
    <string name="audio_player__primary_genre_name">Жанр</string>
    <string name="audio_player__country">Страна</string>

    <!-- media_library -->

</resources>