<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MainBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="15dp"
    android:paddingBottom="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/ys_display_medium"
        android:paddingBottom="10dp"
        android:text="@string/main__title"
        android:textColor="@color/yp_white"
        android:background="@null"
        android:textSize="@dimen/primary_text_size" />

    <Button
        android:id="@+id/btnSearch"
        style="@style/MainMenuButton"
        android:text="@string/main__search"
        app:icon="@drawable/ic_search" />

    <Button
        android:id="@+id/btnLibrary"
        style="@style/MainMenuButton"
        android:text="@string/main__media_library"
        app:icon="@drawable/ic_library" />

    <Button
        android:id="@+id/btnSettings"
        style="@style/MainMenuButton"
        android:text="@string/main__settings"
        app:icon="@drawable/ic_settings" />

</LinearLayout>