<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AudioPlayerActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_track__toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <ImageView
        android:id="@+id/activity_track__cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="26dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/activity_track__name"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/activity_track__toolbar"
        tools:srcCompat="@sample/tracks.json/data/artworkUrl100" />

    <TextView
        android:id="@+id/activity_track__name"
        style="@style/AudioPlayer_text"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="24dp"
        android:textSize="@dimen/primary_text_size"
        app:layout_constraintBottom_toTopOf="@+id/activity_track__artist_name"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/activity_track__cover"
        tools:text="@sample/tracks.json/data/trackName" />

    <TextView
        android:id="@+id/activity_track__artist_name"
        style="@style/AudioPlayer_text"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@+id/activity_track__btn_play_track"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/activity_track__name"
        tools:text="@sample/tracks.json/data/artistName" />

    <!-- элементы управления -->
    <ImageButton
        android:id="@+id/activity_track__btn_add_to_playlist"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/round_button"
        android:foregroundGravity="center"
        android:src="@drawable/ic_add_51"
        app:layout_constraintBottom_toBottomOf="@+id/activity_track__btn_play_track"
        app:layout_constraintEnd_toStartOf="@id/activity_track__btn_play_track"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="@+id/activity_track__btn_play_track" />

    <ImageButton
        android:id="@+id/activity_track__btn_play_track"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_button"
        android:foregroundGravity="center"
        android:src="@drawable/ic_play_100"
        app:layout_constraintBottom_toTopOf="@+id/activity_track__progress"
        app:layout_constraintEnd_toStartOf="@id/activity_track__btn_add_to_favorites"
        app:layout_constraintStart_toEndOf="@+id/activity_track__btn_add_to_playlist"
        app:layout_constraintTop_toBottomOf="@+id/activity_track__artist_name" />

    <ImageButton
        android:id="@+id/activity_track__btn_add_to_favorites"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/round_button"
        android:contentDescription="TODO"
        android:foregroundGravity="center"
        android:src="@drawable/ic_favorites_51"
        app:layout_constraintBottom_toBottomOf="@+id/activity_track__btn_play_track"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toEndOf="@+id/activity_track__btn_play_track"
        app:layout_constraintTop_toTopOf="@+id/activity_track__btn_play_track" />

    <TextView
        android:id="@+id/activity_track__progress"
        style="@style/AudioPlayer_text"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/activity_track__duration"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/activity_track__btn_play_track"
        tools:text="0:00" />

    <!-- характеристики трека -->
    <TextView
        android:id="@+id/activity_track__duration"
        style="@style/AudioPlayer_description_title"
        android:text="@string/audio_player__duration"
        app:layout_constraintBottom_toTopOf="@id/activity_track__collection"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTag="durationTag"
        app:layout_constraintTop_toBottomOf="@id/activity_track__progress" />

    <TextView
        android:id="@+id/activity_track__collection"
        style="@style/AudioPlayer_description_title"
        android:text="@string/audio_player__collection_name"
        app:layout_constraintBottom_toTopOf="@id/activity_track__release_year"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTag="albumTag"
        app:layout_constraintTop_toBottomOf="@id/activity_track__duration" />

    <TextView
        android:id="@+id/activity_track__release_year"
        style="@style/AudioPlayer_description_title"
        android:text="@string/audio_player__release_year"
        app:layout_constraintBottom_toTopOf="@id/activity_track__genre"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTag="yearTag"
        app:layout_constraintTop_toBottomOf="@id/activity_track__collection" />

    <TextView
        android:id="@+id/activity_track__genre"
        style="@style/AudioPlayer_description_title"
        android:text="@string/audio_player__primary_genre_name"
        app:layout_constraintBottom_toTopOf="@id/activity_track__country"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTag="genreTag"
        app:layout_constraintTop_toBottomOf="@id/activity_track__release_year" />

    <TextView
        android:id="@+id/activity_track__country"
        style="@style/AudioPlayer_description_title"
        android:text="@string/audio_player__country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTag="countryTag"
        app:layout_constraintTop_toBottomOf="@id/activity_track__genre" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/activity_track__textBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_tags="durationTag, albumTag, yearTag, genreTag, countryTag" />

    <TextView
        android:id="@+id/activity_track__trackTime"
        style="@style/AudioPlayer_description_data"
        app:layout_constraintBottom_toBottomOf="@id/activity_track__duration"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/activity_track__textBarrier"
        app:layout_constraintTop_toTopOf="@id/activity_track__duration"
        tools:text="0:00" />

    <TextView
        android:id="@+id/activity_track__collection_name"
        style="@style/AudioPlayer_description_data"
        app:layout_constraintBottom_toBottomOf="@id/activity_track__collection"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/activity_track__textBarrier"
        app:layout_constraintTop_toTopOf="@id/activity_track__collection"
        tools:text="@sample/tracks.json/data/collectionName" />

    <TextView
        android:id="@+id/activity_track__release_date"
        style="@style/AudioPlayer_description_data"
        app:layout_constraintBottom_toBottomOf="@id/activity_track__release_year"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/activity_track__textBarrier"
        app:layout_constraintTop_toTopOf="@id/activity_track__release_year"
        tools:text="@sample/tracks.json/data/releaseYear" />

    <TextView
        android:id="@+id/activity_track__primary_genre_name"
        style="@style/AudioPlayer_description_data"
        app:layout_constraintBottom_toBottomOf="@id/activity_track__genre"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/activity_track__textBarrier"
        app:layout_constraintTop_toTopOf="@id/activity_track__genre"
        tools:text="@sample/tracks.json/data/primaryGenreName" />

    <TextView
        android:id="@+id/activity_track__country_data"
        style="@style/AudioPlayer_description_data"
        app:layout_constraintBottom_toBottomOf="@id/activity_track__country"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/activity_track__textBarrier"
        app:layout_constraintTop_toTopOf="@id/activity_track__country"
        tools:text="@sample/tracks.json/data/country" />

</androidx.constraintlayout.widget.ConstraintLayout>
